objects/zqu__QuoteChargeDetail__c.object
<CustomObject>
    <description>This object is used to store the details (including billing metrics) for charges on a quote.</description>
    <fields>
        <fullName>zqu__BillingDiscount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__BillingSubtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__BillingTax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__BillingTotal__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__ChargeNumber__c</fullName>
        <description>A unique number that identifies the charge</description>
        <inlineHelpText>A unique number that identifies the charge</inlineHelpText>
        <label>Charge Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountMRR__c</fullName>
        <description>The Contracted Delta Discount MRR value returned by previewing the Quote in Zuora</description>
        <inlineHelpText>The Contracted Delta Discount MRR value returned by previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCBTax__c</fullName>
        <description>Tax on the Delta Discount TCB retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Tax on the Delta Discount TCB retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount TCB Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCB__c</fullName>
        <description>Delta Discount TCB value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta Discount TCB value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount TCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCV__c</fullName>
        <description>Delta Discount TCV value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta Discount TCV value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaMRR__c</fullName>
        <description>The Contracted Delta MRR value returned by previewing the quote in Zuora</description>
        <inlineHelpText>Delta MRR value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>Delta MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCBTax__c</fullName>
        <description>Tax on the Delta TCB retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Tax on the Delta TCB retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta TCB Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCB__c</fullName>
        <description>Delta TCB value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Delta TCB value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta TCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCV__c</fullName>
        <description>Delta TCV value calculated by previewing the quote from Zuora</description>
        <inlineHelpText>Delta TCV value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>Delta TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DiscountMRR__c</fullName>
        <description>The Discount CMRR value returned by previewing the Quote in Zuora</description>
        <inlineHelpText>The Discount CMRR value returned by previewing the Quote in Zuora</inlineHelpText>
        <label>Discount MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DiscountTCBTax__c</fullName>
        <description>Tax on the Discount TCB retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Tax on the Discount TCB retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Discount TCB Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DiscountTCB__c</fullName>
        <description>Discount TCB value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Discount TCB value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Discount TCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DiscountTCV__c</fullName>
        <description>Discount TCV value retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Discount TCV value retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Discount TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__MRR__c</fullName>
        <description>The Contracted MRR value returned by previewing the quote in Zuora</description>
        <inlineHelpText>MRR value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__OriginalId__c</fullName>
        <description>The Zuora Id of the original Rate Plan Charge this charge corresponds to.</description>
        <inlineHelpText>The Zuora Id of the original Rate Plan Charge this charge corresponds to.</inlineHelpText>
        <label>Original Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__OriginalRatePlanId__c</fullName>
        <description>The Zuora Id of the original Rate Plan this charge belongs to</description>
        <inlineHelpText>The Zuora Id of the original Rate Plan this charge belongs to</inlineHelpText>
        <label>Original Rate Plan Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanCharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Product Rate Plan Charge this charge came from.</description>
        <inlineHelpText>The Product Rate Plan Charge this charge came from.</inlineHelpText>
        <label>Product Rate Plan Charge</label>
        <referenceTo>zqu__ProductRatePlanCharge__c</referenceTo>
        <relationshipLabel>Quote Charge Details</relationshipLabel>
        <relationshipName>QuoteChargeDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Product Rate Plan this charge comes from.</description>
        <inlineHelpText>The Product Rate Plan this charge comes from.</inlineHelpText>
        <label>Product Rate Plan</label>
        <referenceTo>zqu__ProductRatePlan__c</referenceTo>
        <relationshipLabel>Quote Charge Details</relationshipLabel>
        <relationshipName>QuoteChargeDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Quote__c</fullName>
        <description>The quote object this charge record belongs to.</description>
        <inlineHelpText>The quote object this charge record belongs to.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Quote Charge Details</relationshipLabel>
        <relationshipName>QuoteChargeDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__TCBTax__c</fullName>
        <description>Tax on the Total Contracted Billing calculated by previewing the Quote in Zuora</description>
        <inlineHelpText>Tax on the TCB calculated by previewing the quote from Zuora</inlineHelpText>
        <label>TCB Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__TCB__c</fullName>
        <description>Total Contracted Billing value calculated by previewing the Quote in Zuora</description>
        <inlineHelpText>TCB value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>TCB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__TCV__c</fullName>
        <description>TCV value calculated by previewing the quote from Zuora</description>
        <inlineHelpText>TCV value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Quote Charge Detail</label>
    <nameField>
        <label>Quote Charge Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Charge Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>